2004-01-06  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-messagedisplay.xml: Fix missing ">" typo

2004-01-06  Rodney Dawes  <dobey@ximian.com>

	* evolution-comp-editor.xml:
	* evolution-contact-editor.xml:
	* evolution-contact-list-editor.xml:
	* evolution-event-editor.xml:
	* evolution-mail-messagedisplay.xml:
	* evolution-message-composer.xml:
	* evolution-signature-editor.xml:
	* evolution.xml: Fixes bug #39488, use hlook="system" for toolbars

2003-12-31  Kidd Wang  <kidd.wang@sun.com>

	* evolution-tasks.xml: Add a menu item [Open Task] to [File] for
	the tasks component.

2003-12-23  Kidd Wang  <kidd.wang@sun.com>

	* evolution-calendar.xml: Add a menu item [Open Appointment] to [File].

2003-12-18  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-message.xml:
	* evolution-mail-messagedisplay.xml: Revert previous patch to
	fix bug #49949 - exposes crash in libbonoboui when switching
	away from mail component

2003-12-18  Calvin Liu <calvin.liu@sun.com>

	* evolution-mail-message.xml: On [Action] menu, change [Forward]
	to [Forward As...], [Forward Message] to [Forward].

2003-12-17  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-message.xml:
	* evolution-mail-messagedisplay.xml: Fix bug #49949

2003-12-17  Chris Toshok  <toshok@ximian.com>

	* evolution-addressbook.xml: add ContactsViewPreview command, a
	"Preview Pane" menu item, and a keybinding for it - same placement
	as the mailer's item.

2003-12-17  Rodrigo Moya <rodrigo@ximian.com>

	* evolution-calendar.xml: removed the 'NewCalendar' verb.

2003-12-09  Not Zed  <NotZed@Ximian.com>

	* evolution-mail-global.xml: add a _label to View option.  Bug
	#51242.

2003-12-04  Radek Doulik  <rodo@ximian.com>

	* evolution-mail-message.xml: added junk toolbar buttons

2003-12-03  JP Rosevear <jpr@ximian.com>

	* evolution-mail-global.xml: we want to insert at the place holder
	spot

2003-11-30  Yuedong Du  <yuedong.du@sun.com>
