@@ -1,3 +1,8 @@
+2004-01-12  Meilof Veeningen  <meilof@wanadoo.nl>
+
+	* evolution-message-composer.xml: Add menu items to show To and
+	PostTo
+
 2004-01-06  Rodney Dawes  <dobey@ximian.com>
 
 	* evolution-mail-messagedisplay.xml: Fix missing ">" typo
